<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity strings -->
    <string name="app_name">Androne</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_take_off">Take Off</string>
    <string name="action_land">Land</string>
    
    <!-- Status strings -->
    <string name="text_view_battery">Battery: </string>
    <string name="text_view_state">State: </string>
    <string name="text_view_altitude">Altitude: </string>

    <!-- Fragment shape strings -->
    <string name="shape_prompt">Choose a shape</string>
    <string-array name="shape_chooser">
        <item>Rectangle</item>
        <item>Triangle</item>
        <item>Circle</item>
    </string-array>
    <string name="shape_button_set">Set ...</string>
    <string name="shape_button_start">Start</string>
    <string name="shape_check_change_direction">Change direction</string>
    <string name="shape_rect_tri_angle_width_text">Width / m:</string>
    <string name="shape_rect_tri_angle_height_text">Height / m:</string>
    <string name="shape_circle_radius_text">Radius / m:</string>
</resources>