<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/text_view_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_altitude" />

    <TextView
        android:id="@+id/text_view_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_state" />

    <TextView
        android:id="@+id/text_view_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_battery" />

    <LinearLayout
        android:id="@+id/shape_control_panel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/text_view_altitude"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >
        
        <Spinner
            android:id="@+id/shape_chooser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/shape_chooser"
            android:layout_marginBottom="20dp" />
        
        <CheckBox 
            android:id="@+id/shape_check_change_direction"
            android:text="@string/shape_check_change_direction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        
        <Button 
            android:id="@+id/shape_button_show_value_picker"
            android:text="@string/shape_button_set"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <Button 
            android:id="@+id/shape_button_start"
            android:text="@string/shape_button_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    
    <de.dhbw.androne.view.shape.CircleShapeView
        android:id="@+id/circle_shape_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text_view_altitude"
        android:layout_toRightOf="@id/shape_control_panel" />

    <de.dhbw.androne.view.shape.TriangleShapeView
        android:id="@+id/triangle_shape_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text_view_altitude"
        android:layout_toRightOf="@id/shape_control_panel" />
    
    <de.dhbw.androne.view.shape.RectangleShapeView
        android:id="@+id/rectangle_shape_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text_view_altitude"
        android:layout_toRightOf="@id/shape_control_panel" />
    
</RelativeLayout>